--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,8 +21,8 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
-
-
+$background-color: #f1f1f1;
+$list-background-color: #fff;
 
 
 // Named Color Variables
