--- a/src/pages/epoch-converter/epoch-converter.scss
+++ b/src/pages/epoch-converter/epoch-converter.scss
@@ -14,7 +14,7 @@ epoch-converter {
       position: absolute;
       width: 100%;
       height: 240px;
-      background-image: url('../assets/bg.png');
+      background-image: url('../assets/epoch-converter/bg.png');
       background-size: cover;
       background-position: top;
       background-repeat: no-repeat;
