--- a/src/pages/epoch-converter/epoch-converter.scss
+++ b/src/pages/epoch-converter/epoch-converter.scss
@@ -21,8 +21,11 @@ epoch-converter {
       z-index: -1;
     }
 
-    .card {
-      margin: 10px;
+    ion-card {
+      //margin: 10px;
+      ion-card-header {
+        color: map-get($colors, primary);
+      }
     }
 
     #banner {
