--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,7 +23,12 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 $background-color: #f1f1f1;
 $list-background-color: #fff;
-
+$card-ios-header-font-size: 1.8rem;
+$card-md-header-font-size: 1.8rem;
+$card-wp-header-font-size: 1.8rem;
+$card-ios-text-color: #757575;
+$card-md-text-color: #757575;
+$card-wp-text-color: #757575;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -34,7 +39,7 @@ $list-background-color: #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #4e93b4,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
