Add floating point converter module

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,8 +18,12 @@ ion-menu {
   ion-content {
     ion-list {
       button[ion-item] {
-        height: 6rem;
+        //height: 6rem;
         background: none;
+
+        &:hover {
+          background: lighten(gray, 35%);
+        }
       }
     }
   }
