Refine menu style

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $app-direction: ltr;
 $background-color: #f1f1f1;
 $list-background-color: #fff;
 
-$toolbar-background:         #34495E;
+$toolbar-background:         #283E4A;
 $toolbar-border-color:       #ECF0F1;
 $toolbar-text-color:         #f1f1f1;
 
