--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,13 +38,20 @@ ion-menu {
             color: #3F3F3F;
 
             ion-icon {
-              color: #888;
+              color: #777;
               font-size: 2.6rem;
               width: 2.6rem;
               margin-right: 8px;
             }
           }
         }
+      }
+    }
+
+    .scroll-content {
+      background: white;
+      @media (min-width: breakpoint-min(md)) {
+        background: none;
       }
     }
   }
