--- a/src/pages/epoch-converter/epoch-converter.scss
+++ b/src/pages/epoch-converter/epoch-converter.scss
@@ -42,17 +42,28 @@ epoch-converter {
       ion-card-content {
 
         #clock-seconds {
-          border: 4px solid map-get($colors, primary);//lighten(gray, 30%);
+          border: 4px solid map-get($colors, primary);
           border-radius: 50%;
           width: 128px;
           height: 128px;
           margin: auto;
           text-align: center;
 
+          &:hover {
+            border: 8px solid map-get($colors, primary-dark);
+            background: map-get($colors, primary);
+            transition: all 0.2s;
+
+            p {
+              color: white;
+            }
+          }
+
           p {
             display: inline-block;
             margin-top: 50%;
             line-height: 0;
+            user-select: auto;
           }
         }
       }
