Start using icomoon for custom icon fonts

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,10 @@
   <ion-menu [content]="content">
     <ion-header>
       <ion-toolbar>
-        <ion-title>CoderBox.io</ion-title>
+        <ion-title>
+          <ion-icon name="coderbox"></ion-icon>
+          CoderBox.io
+        </ion-title>
       </ion-toolbar>
     </ion-header>
 
