Add icons to Epoch Converter components

--- a/src/pages/float-converter/float-converter.scss
+++ b/src/pages/float-converter/float-converter.scss
@@ -35,6 +35,10 @@ float-converter {
       }
     }
 
+    #float-card {
+      grid-area: float;
+    }
+
     @media (min-width: breakpoint-min(lg)) {
       grid-template-areas:
         "banner banner"
