--- a/src/theme/icomoon.scss
+++ b/src/theme/icomoon.scss
@@ -56,3 +56,15 @@ ion-icon[ng-reflect-name="about"]:before {
 ion-icon[ng-reflect-name="settings"]:before {
   content: "\eb61";
 }
+ion-icon[ng-reflect-name="note"]:before {
+  content: "\e613";
+}
+ion-icon[ng-reflect-name="time-convert"]:before {
+  content: "\e8e4";
+}
+ion-icon[ng-reflect-name="time"]:before {
+  content: "\e904";
+}
+ion-icon[ng-reflect-name="date"]:before {
+  content: "\e905";
+}
