--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,4 +15,5 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 @import "../components/menu";
-@import "../components/cards";
+@import "../components/card";
+@import "../components/item";
