--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -91,6 +91,7 @@ $colors: (
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
+//@import "ionic.ionicons";
 @import "icomoon";
 
 
