--- a/src/theme/icomoon.scss
+++ b/src/theme/icomoon.scss
@@ -68,3 +68,6 @@ ion-icon[ng-reflect-name="time"]:before {
 ion-icon[ng-reflect-name="date"]:before {
   content: "\e905";
 }
+ion-icon[ng-reflect-name="float-convert"]:before {
+  content: "\e906";
+}
