--- a/src/components/item.scss
+++ b/src/components/item.scss
@@ -7,4 +7,12 @@ ion-item {
       margin-left: 0 !important;
     }
   }
+
+  &.item-md {
+    &.item-block {
+      .item-inner {
+        border-bottom: 1px solid #dedede !important;
+      }
+    }
+  }
 }
