Update icons for CoderBox.io

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,10 @@
     <ion-header>
       <ion-toolbar>
         <ion-title>
-          <ion-icon name="coderbox"></ion-icon>
+          <ion-icon name="coderbox">
+            <span class="darker"></span>
+            <span class="lighter"></span>
+          </ion-icon>
           CoderBox.io
         </ion-title>
       </ion-toolbar>
