--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,11 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      <ion-icon name="coderbox">
+        <span class="darker"></span>
+        <span class="lighter"></span>
+      </ion-icon>
+      CoderBox
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,32 +17,48 @@
     <ion-card class="welcome-card">
       <ion-img src="/assets/shapes.svg"></ion-img>
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-subtitle>CoderBox</ion-card-subtitle>
+        <ion-card-title>Welcome to CoderBox</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>
+          CoderBox is a Progressive Web App (PWA) designed by developers for developers. It contains commo DEVn tools needed for day to day coding environment.
+        </p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
-        <ion-label>Resources</ion-label>
+        <ion-label>Modules</ion-label>
+      </ion-list-header>
+      <ion-item href="/hash-generator">
+        <ion-icon slot="start" color="medium" name="code-working"></ion-icon>
+        <ion-label>Hash Generator</ion-label>
+      </ion-item>
+      <ion-item href="/epoch-time-converter">
+        <ion-icon slot="start" color="medium" name="build"></ion-icon>
+        <ion-label>Epoch Time Converter</ion-label>
+      </ion-item>
+      <ion-item href="/floating-point-converter">
+        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
+        <ion-label>Floating Point Converter</ion-label>
+      </ion-item>
+    </ion-list>
+
+    <ion-list lines="none">
+      <ion-list-header>
+        <ion-label>Coming Soon</ion-label>
       </ion-list-header>
       <ion-item href="https://ionicframework.com/docs/">
         <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+        <ion-label>Character Encoding Converter</ion-label>
       </ion-item>
       <ion-item href="https://ionicframework.com/docs/building/scaffolding">
         <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+        <ion-label>Unicode Code Converter</ion-label>
       </ion-item>
       <ion-item href="https://ionicframework.com/docs/layout/structure">
         <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
+        <ion-label>Base64 Online Encoder/Decoder</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
