--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,8 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+.welcome-card ion-img {
+    max-height: 35vh;
+    overflow: hidden;
+}
