--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,7 +35,7 @@
         <ion-label>Hash Generator</ion-label>
       </ion-item>
       <ion-item href="/epoch-time-converter">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
+        <ion-icon slot="start" color="medium" name="alarm"></ion-icon>
         <ion-label>Epoch Time Converter</ion-label>
       </ion-item>
       <ion-item href="/floating-point-converter">
