--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,11 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      <ion-icon name="coderbox">
-        <span class="darker"></span>
-        <span class="lighter"></span>
-      </ion-icon>
-      CoderBox
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
