Add icons for hash-generator

--- a/src/app/hash-generator/hash-generator.page.html
+++ b/src/app/hash-generator/hash-generator.page.html
@@ -27,7 +27,7 @@
 
     <ion-card id="string-card">
       <ion-card-header>
-        <ion-card-subtitle>Texual String</ion-card-subtitle>
+        <ion-card-subtitle>Enter Texual String</ion-card-subtitle>
         <ion-card-title>Your Own Text</ion-card-title>
       </ion-card-header>
     
@@ -46,7 +46,7 @@
 
       <ion-card-content>
         <ion-item>
-          <ion-icon name="md5" item-start></ion-icon>
+          <ion-icon slot="start" src="assets/hash-generator/md5.svg"></ion-icon>
           <ion-input type="string" [(ngModel)]="md5">
           </ion-input>
         </ion-item>
@@ -59,7 +59,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-item>
-          <ion-icon name="sha1" item-start></ion-icon>
+          <ion-icon slot="start" src="assets/hash-generator/sha1.svg"></ion-icon>
           <ion-input type="string" [(ngModel)]="sha1">
           </ion-input>
         </ion-item>
@@ -72,7 +72,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-item>
-          <ion-icon name="sha256" item-start></ion-icon>
+          <ion-icon slot="start" src="assets/hash-generator/sha256.svg"></ion-icon>
           <ion-input type="string" [(ngModel)]="sha256">
           </ion-input>
         </ion-item>
@@ -85,7 +85,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-item>
-          <ion-icon name="sha512" item-start></ion-icon>
+          <ion-icon slot="start" src="assets/hash-generator/sha512.svg"></ion-icon>
           <ion-input type="string" [(ngModel)]="sha512">
           </ion-input>
         </ion-item>
@@ -98,7 +98,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-item>
-          <ion-icon name="rmd" item-start></ion-icon>
+          <ion-icon slot="start" src="assets/hash-generator/rmd.svg"></ion-icon>
           <ion-input type="string" [(ngModel)]="rmd160">
           </ion-input>
         </ion-item>
