--- a/src/app/hash-generator/hash-generator.page.scss
+++ b/src/app/hash-generator/hash-generator.page.scss
@@ -57,8 +57,19 @@ main {
  */
 
 ion-content {
-    
     --ion-background-color: var(--ion-color-light, #f4f5f8);
     --ion-item-background: white;
-
+    ion-card {
+        ion-card-content {
+            ion-item {
+                ion-icon {
+                    // font-size: 24px;
+                    margin-right: 16px;
+                    margin-right: unset;
+                    -webkit-margin-end: 16px;
+                    margin-inline-end: 16px;
+                }
+            }
+        }
+    }
 }
