--- a/src/app/hash-generator/hash-generator.page.scss
+++ b/src/app/hash-generator/hash-generator.page.scss
@@ -62,12 +62,52 @@ ion-content {
     ion-card {
         ion-card-content {
             ion-item {
-                ion-icon {
+                ion-icon[slot="start"] {
                     // font-size: 24px;
                     margin-right: 16px;
                     margin-right: unset;
                     -webkit-margin-end: 16px;
                     margin-inline-end: 16px;
+                }
+
+                .tooltip {
+                    position: relative;
+                    display: inline-block;
+
+                    .tooltiptext {
+                        visibility: hidden;
+                        width: 100%;
+                        background-color: #555;
+                        color: #fff;
+                        text-align: center;
+                        border-radius: 6px;
+                        padding: 5px;
+                        position: absolute;
+                        z-index: 1;
+                        bottom: 150%;
+                        left: 50%;
+                        margin-left: -75px;
+                        opacity: 0;
+                        transition: opacity 0.3s;
+
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            top: 100%;
+                            left: 50%;
+                            margin-left: -5px;
+                            border-width: 5px;
+                            border-style: solid;
+                            border-color: #555 transparent transparent transparent;
+                        }
+                    }
+
+                    &:hover {
+                        .tooltiptext {
+                            visibility: visible;
+                            opacity: 1;
+                        }
+                    } 
                 }
             }
         }
