--- a/src/global.scss
+++ b/src/global.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
 }
 
-#menubar-title {
+.menubar-title {
     .coderbox-icon {
         font-size: 25px;
         vertical-align: middle;
