--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu>
       <ion-header>
         <ion-toolbar>
-          <ion-title id="menubar-title">
+          <ion-title class="menubar-title">
               <ion-icon class="coderbox-icon lighter" src="assets/icon/coderbox-part-lighter.svg"></ion-icon>
               <ion-icon class="coderbox-icon darker" src="assets/icon/coderbox-part-darker.svg"></ion-icon>
             CoderBox
