--- a/src/app/epoch-converter/epoch-converter.page.html
+++ b/src/app/epoch-converter/epoch-converter.page.html
@@ -13,8 +13,8 @@
 
   <main>
 
-  <ion-card id="welcome-card" class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+    <ion-card id="welcome-card" class="welcome-card">
+      <ion-img src="/assets/epoch-converter/welcome.svg"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Convert Epoch Timestamps</ion-card-subtitle>
         <ion-card-title>Epoch Time Converter</ion-card-title>
