Fix broken epoch-converter link on home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,7 +35,7 @@
           <ion-icon slot="start" color="medium" name="code-working"></ion-icon>
           <ion-label>Hash Generator</ion-label>
         </ion-item>
-        <ion-item href="/epoch-time-converter">
+        <ion-item href="/epoch-converter">
           <ion-icon slot="start" color="medium" name="alarm"></ion-icon>
           <ion-label>Epoch Time Converter</ion-label>
         </ion-item>
