--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,7 @@
       <ion-header>
         <ion-toolbar>
           <ion-title class="menubar-title">
-              <ion-icon class="coderbox-icon lighter" src="assets/icon/coderbox-part-lighter.svg"></ion-icon>
-              <ion-icon class="coderbox-icon darker" src="assets/icon/coderbox-part-darker.svg"></ion-icon>
+            <ion-icon class="coderbox-icon" src="assets/icons/coderbox.svg"></ion-icon>
             CoderBox
           </ion-title>
         </ion-toolbar>
