Provide image dimensions up front for welcome cards

--- a/src/app/epoch-converter/epoch-converter.page.html
+++ b/src/app/epoch-converter/epoch-converter.page.html
@@ -14,7 +14,7 @@
   <main>
 
     <ion-card id="welcome-card" class="welcome-card">
-      <ion-img src="/assets/epoch-converter/welcome.svg"></ion-img>
+      <ion-img src="/assets/epoch-converter/welcome.svg" width="350" height="140"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Convert Epoch Timestamps</ion-card-subtitle>
         <ion-card-title>Epoch Time Converter</ion-card-title>
