--- a/src/app/hash-generator/hash-generator.page.html
+++ b/src/app/hash-generator/hash-generator.page.html
@@ -13,7 +13,7 @@
   <main>
 
     <ion-card id="welcome-card" class="welcome-card">
-      <ion-img src="/assets/hash-generator/welcome.svg"></ion-img>
+      <ion-img src="/assets/hash-generator/welcome.svg" width="350" height="140"></ion-img>
       <ion-card-header>
       <ion-card-subtitle>Generate Hash Codes</ion-card-subtitle>
         <ion-card-title>Hash Generator</ion-card-title>
