--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
 <ion-content>
   <main>
     <ion-card class="welcome-card" id="welcome-card">
-      <ion-img src="/assets/home/welcome.svg"></ion-img>
+      <ion-img src="/assets/home/welcome.svg" width="350" height="140"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Day-to-Day Dev Toools</ion-card-subtitle>
         <ion-card-title>CoderBox</ion-card-title>
