--- a/src/app/epoch-converter/epoch-converter.page.scss
+++ b/src/app/epoch-converter/epoch-converter.page.scss
@@ -59,6 +59,7 @@ main {
                 height: 128px;
                 margin: auto;
                 text-align: center;
+                transition: all 0.2s;
 
                 &:hover {
                     border: 8px solid var(--ion-color-primary-shade);
@@ -68,6 +69,10 @@ main {
                     p {
                         color: white;
                     }
+
+                    ion-button {
+                        --color: white;
+                    }
                 }
 
                 p {
@@ -75,6 +80,19 @@ main {
                     margin-top: 50%;
                     line-height: 0;
                     user-select: auto;
+                }
+
+                ion-button {
+                    --color:var(--ion-color-medium);
+                }
+
+                &.milliseconds {
+                    border: 4px solid var(--ion-color-secondary);
+
+                    &:hover {
+                        border: 8px solid var(--ion-color-secondary-shade);
+                        background: var(--ion-color-secondary);
+                    }
                 }
             }
 
