--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -6,13 +6,13 @@
     <div class="sidenav-wrapper">
       <mat-toolbar></mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item href="/">
+        <a mat-list-item routerLink="">
           <mat-icon>home</mat-icon>
           <span>Home</span>
         </a>
-        <a mat-list-item href="/settings">
-          <mat-icon>settings</mat-icon>
-          <span>Settings</span>
+        <a mat-list-item routerLink="/hash-generator">
+          <mat-icon svgIcon="hash-generator"></mat-icon>
+          <span>Hash Generator</span>
         </a>
       </mat-nav-list>
       <mat-list class="theme-switcher">
