--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,10 +1,12 @@
 @import '~@angular/material/theming';
 
 @import './app/shared/components/sidenav/sidenav.theme';
+@import './app/shared/components/file-drop-area/file-drop-area.theme';
 
 
 @mixin coderbox-app-theme($theme) {
   @include sidenav-theme($theme);
+  @include file-drop-area-theme($theme);
 }
 
 @include mat-core();
