Epoch Time Converter Page

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -14,6 +14,10 @@
           <mat-icon svgIcon="hash-generator"></mat-icon>
           <span>Hash Generator</span>
         </a>
+        <a mat-list-item routerLink="/epoch-converter">
+          <mat-icon svgIcon="epoch-converter"></mat-icon>
+          <span>Epoch Time Converter</span>
+        </a>
       </mat-nav-list>
       <mat-list class="theme-switcher">
         <mat-list-item>
