--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -2,11 +2,15 @@
 
 @import './app/shared/components/sidenav/sidenav.theme';
 @import './app/shared/components/file-drop-area/file-drop-area.theme';
+@import './app/shared/components/circle-clock/circle-clock.theme';
+@import './app/pages/epoch-converter/epoch-converter.theme';
 
 
 @mixin coderbox-app-theme($theme) {
   @include sidenav-theme($theme);
   @include file-drop-area-theme($theme);
+  @include circle-clock-theme($theme);
+  @include epoch-converter-theme($theme);
 }
 
 @include mat-core();
