--- a/src/app/pages/epoch-converter/epoch-converter.page.html
+++ b/src/app/pages/epoch-converter/epoch-converter.page.html
@@ -59,31 +59,24 @@
             <mat-form-field>
               <mat-icon matPrefix svgIcon="time"></mat-icon>
               <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Datetime String"
-                [value]="epochInputDate.toString()" #dateStringOutput></textarea>
-              <button matSuffix mat-icon-button aria-label="Copy" matTooltip="Copy"
-                (click)="copyToClipboard(dateStringOutput)">
-                <mat-icon svgIcon="copy"></mat-icon>
-              </button>
+                [value]="epochInputDate.toString()"></textarea>
+              <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="locale-time"></mat-icon>
               <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Locale Datetime String"
-                [value]="epochInputDate.toLocaleString()" #localeStringOutput></textarea>
-              <button matSuffix mat-icon-button aria-label="Copy" matTooltip="Copy" (click)="copyToClipboard(localeStringOutput)">
-                <mat-icon svgIcon="copy"></mat-icon>
-              </button>
+                [value]="epochInputDate.toLocaleString()"></textarea>
+              <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="iso"></mat-icon>
               <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="ISO 8601 Time Format"
-                [value]="epochInputDate.toISOString()" #ISOStringOutput></textarea>
-              <button matSuffix mat-icon-button aria-label="Copy" matTooltip="Copy" (click)="copyToClipboard(ISOStringOutput)">
-                <mat-icon svgIcon="copy"></mat-icon>
-              </button>
+                [value]="epochInputDate.toISOString()"></textarea>
+              <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
         </mat-list>
@@ -111,10 +104,8 @@
             <mat-form-field>
               <mat-icon matPrefix svgIcon="hourglass"></mat-icon>
               <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Unix Timestamp"
-                [value]="stringInputDate.getTime()" #timestampOutput></textarea>
-              <button matSuffix mat-icon-button aria-label="Copy" matTooltip="Copy" (click)="copyToClipboard(timestampOutput)">
-                <mat-icon svgIcon="copy"></mat-icon>
-              </button>
+                [value]="stringInputDate.getTime()"></textarea>
+              <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
         </mat-list>
