--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <main>
-  <mat-card id="welcome-card">
+  <mat-card class="welcome-card">
     <img mat-card-image src="assets/home/welcome.svg" width="350" height="140">
     <mat-card-header>
       <mat-card-title>CoderBox</mat-card-title>
@@ -10,10 +10,12 @@
         CoderBox is a set of common developer tools to make your day to day coding life easier.
       </p>
       <p>
-        CoderBox is an Open Source project made by developers for developers. It is always free, always readily availble at your fingertips. CoderBox is Open Source under MIT license.
+        CoderBox is an Open Source project made by developers for developers. It is always free, always readily availble
+        at your fingertips. CoderBox is Open Source under MIT license.
       </p>
       <p>
-        CoderBox is implmented as a Progressive Web App (PWA) using Angular. We welcome any contribution, bug report on our GitHub repository.
+        CoderBox is implmented as a Progressive Web App (PWA) using Angular. We welcome any contribution, bug report on
+        our GitHub repository.
       </p>
     </mat-card-content>
     <mat-divider></mat-divider>
