--- a/src/app/pages/epoch-converter/epoch-converter.page.html
+++ b/src/app/pages/epoch-converter/epoch-converter.page.html
@@ -17,14 +17,15 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="container">
+  <div class="cards-grid-container">
     <mat-card class="epoch-clock-card" *ngIf="(now$ | async) as now">
       <mat-card-header>
         <mat-card-title>Today, {{ now | date:'longDate' }}</mat-card-title>
         <mat-card-subtitle>{{ now.toTimeString() }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <app-circle-clock [timestamp]="now.getTime()" [unit]="millisecondsToggleCtrl.value ? 'milliseconds' : 'seconds'">
+        <app-circle-clock [timestamp]="now.getTime()"
+          [unit]="millisecondsToggleCtrl.value ? 'milliseconds' : 'seconds'">
         </app-circle-clock>
         <section class="clock-toggle-section">
           <label>Seconds</label>
