--- a/src/app/pages/hash-generator/hash-generator.page.html
+++ b/src/app/pages/hash-generator/hash-generator.page.html
@@ -68,17 +68,23 @@
     </mat-card-footer>
   </mat-card>
 
-  <div class="output-container">
-    <ng-container *ngFor="let hash of hashes">
-      <mat-card class="hash-output-card" *ngIf="hash.enabled">
-        <mat-card-content>
-          <mat-form-field>
-            <textarea matInput readonly cdkTextareaAutosize placeholder="{{ hash.algo }} Hash Digest"
-              [(ngModel)]="hash.digestRep"></textarea>
-            <app-input-copy-button matSuffix></app-input-copy-button>
-          </mat-form-field>
-        </mat-card-content>
-      </mat-card>
-    </ng-container>
-  </div>
+  <mat-card class="output-card">
+    <mat-card-header>
+      <mat-card-title>Output Hashes</mat-card-title>
+      <mat-card-subtitle>Hash digests in {{ outputReps[representation - 1] }} </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <ng-container *ngFor="let hash of hashes">
+          <mat-list-item *ngIf="hash.enabled">
+            <mat-form-field>
+              <textarea matInput readonly cdkTextareaAutosize placeholder="{{ hash.algo }} Hash Digest"
+                [(ngModel)]="hash.digestRep"></textarea>
+              <app-input-copy-button matSuffix></app-input-copy-button>
+            </mat-form-field>
+          </mat-list-item>
+        </ng-container>
+      </mat-list>
+    </mat-card-content>
+  </mat-card>
 </main>
