Sidenav icons: add dark-theme icon, update hash-generator icon

--- a/src/app/shared/components/sidenav/_sidenav.theme.scss
+++ b/src/app/shared/components/sidenav/_sidenav.theme.scss
@@ -12,6 +12,10 @@
           border-bottom: 1px solid mat-color($foreground, divider);
         }
       }
+
+      .theme-switcher {
+        border-top: 1px solid mat-color($foreground, divider);
+      }
     }
 
     mat-sidenav-content {
